# NativeActivityDemo

./: .gitignore  README.md  nativeactivity.keystore  settings.gradle
app/: android.keystore  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CubeRender.c  CubeRender.h  GLESEngine.c  GLESEngine.h  ShaderUtils.c  ShaderUtils.h  Shape.cpp  Shape.h  TrianglesRender.c  TrianglesRender.h  app_log.h  config.h  main.c  main.cpp  native-lib.cpp
app/src/main/cpp/entity/: MapLocInfo.h
app/src/main/cpp/gles/: BaseShader.cpp  BaseShader.h  GLESEngine.c  GLESEngine.h
app/src/main/cpp/glsl/: triangles.frag  triangles.vert
app/src/main/cpp/shader/: BaseShader.cpp
app/src/main/cpp/texture/: TextureUtils.cpp  TextureUtils.h
app/src/main/cpp/utils/: AndroidAssetUtils.cpp  AndroidAssetUtils.h  CoordinatesUtils.cpp  CoordinatesUtils.h  ObjHelper.cpp  ObjHelper.h  ShaderUtils.c  ShaderUtils.h  TouchEventHandler.cpp  TouchEventHandler.h  Utils.cpp  Utils.h
app/src/main/cpp/utils/cjson/: cJSON.c  cJSON.h
app/src/main/cpp/utils/libglm0_9_6_3/glm/detail/: intrinsic_integer.hpp
app/src/main/cpp/utils/libpng1_6_29/: CMakeLists.txt
app/src/main/cpp/view/: Cube.cpp  Cube.h  ObjModel.cpp  ObjModel.h  Shape.cpp  Shape.h  SkyBox.cpp  SkyBox.h  Triangles.cpp  Triangles.h
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
